deploy: 3507bd00228110c0035194ae02b41c0f653f9efe

--- a/main/workflow-guide/index.html
+++ b/main/workflow-guide/index.html
@@ -588,7 +588,7 @@ document.addEventListener('keydown', (event) => {
 <div id="header">
 <h1>SSP Traceability Workflow Guide</h1>
 <div class="details">
-<span id="revnumber">version main-5c1d87ed79efd862b2a9c66584b28528bbd9ceb7,</span>
+<span id="revnumber">version main-3507bd00228110c0035194ae02b41c0f653f9efe,</span>
 <span id="revdate">2022-08-08</span>
 </div>
 <div id="toc" class="toc2">
@@ -663,8 +663,8 @@ document.addEventListener('keydown', (event) => {
 <p>The SSP Traceability Workflow Guide is a supplementary documentation to the SSP Traceability Specification 1.0. While the SSP Traceability Specification 1.0 essentially describes a data format for STMD files in the sense of a normative document, the SSP Traceability Workflow Guide addresses how and in which way  Glue Paerticles are used in industrial practice. It thus addresses topics and answers questions that the SSP Traceability Specification 1.0 as a normative document cannot address and answer.</p>
 </div>
 <div class="paragraph">
-<p>This is a development version of the SSP Traceability Workflow Guide. Releases and issues can be found at github.com/PMSFIT/SSPTraceability.
-<a href="https://github.com/PMSFIT/SSPTraceability/releases">Releases</a> and <a href="https://github.com/PMSFIT/SSPTraceability/issues">issues</a> can be found on <a href="https://github.com/PMSFIT/SSPTraceability">github.com/PMSFIT/SSPTraceability</a>.</p>
+<p>This is a development version of the SSP Traceability Workflow Guide.
+<a href="https://github.com/PMSFIT/SSPTraceabilityGuides/releases">Releases</a> and <a href="https://github.com/PMSFIT/SSPTraceabilityGuides/issues">issues</a> can be found on <a href="https://github.com/PMSFIT/SSPTraceabilityGuides">github.com/PMSFIT/SSPTraceabilityGuides</a>.</p>
 </div>
 </div>
 </div>
